log/build_2026-05-30_00-19-06/p0_py/stderr.log
  File "/home/arrgusr/ROS2Dev/ws_sem26_2/install/p0_py/lib/python3.12/site-packages/p0_py/scara_control.py", line 92
    theta_3_in = theta_in -
                           ^
SyntaxError: invalid syntax

